display overflow fix for mobile

--- a/style.css
+++ b/style.css
@@ -110,11 +110,13 @@ body {
 }
 
 #status, #weather, #airQuality {
-  white-space: nowrap;
+  overflow-wrap: break-word; /* Break long words if necessary */
+  word-wrap: break-word; /* Ensure compatibility with older browsers */
   font-size: 2vw;
+  max-width: 100%; /* Ensure text does not overflow container */
 }
 
-@media (max-width: 700px) {
+@media (max-width: 1100px) {
 
   @keyframes minecraft {
     from { font-size: 7vw; }
@@ -142,13 +144,19 @@ body {
   #result-container {
     flex-direction: column;
     align-items: center; /* Center items vertically */
+    background-color: aqua;
+    max-width: 100%;
   }
 
   #map {
-    display: flex;
+    max-width: 100%; /* Ensure display container takes full width on mobile */
   }
 
   #status, #weather, #airQuality {
-    font-size: 2rem;
+    font-size: 1.5rem;
+  }
+
+  .display {
+    max-width: 100%; /* Ensure display container takes full width on mobile */
   }
 }
